--- a/themes/unya/style.css
+++ b/themes/unya/style.css
@@ -628,6 +628,9 @@ a {
       .main-navigation .menu-item {
         border: none;
         width: auto; } }
+    @media (min-width: 600px) {
+      .main-navigation .menu-item .sub-menu .menu-item {
+        text-align: left; } }
 
 /* Small menu. */
 .menu-toggle,
@@ -770,6 +773,12 @@ a {
 
 .ui-accordion .ui-accordion-content {
   padding: 0; }
+
+.menu-item-has-children .sub-menu .menu-item {
+  width: 100vw; }
+  @media (min-width: 600px) {
+    .menu-item-has-children .sub-menu .menu-item {
+      width: auto; } }
 
 /*--------------------------------------------------------------
 # Accessibility
